2009-01-14  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - update copyright

        * Info.plist:

2009-01-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        Add a bunch of methods to WebKitPluginClient.defs, and implement them.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WebKit::fromUTF8WithLatin1Fallback):
        If the length isn't specified, get it by calling strlen.
        
        (WKPCEvaluate):
        Evaluate doesn't take any arguments.
        
        (WKPCGetIntIdentifier):
        Call _NPN_GetIntIdentifier.
        
        (identifierFromServerIdentifier):
        New helper function that returns a JSC Identifier from an NPIdentifier.
        
        (WKPCInvoke):
        Call identifierFromServerIdentifier.
        
        (WKPCRemoveProperty):
        (WKPCHasProperty):
        (WKPCHasMethod):
        Call NetscapePluginInstanceProxy.

        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::removeProperty):
        (WebKit::NetscapePluginInstanceProxy::hasProperty):
        (WebKit::NetscapePluginInstanceProxy::hasMethod):

        * Plugins/Hosted/WebKitPluginClient.defs:
        Add new definitions.

2009-01-13  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * WebView/WebView.mm:
        (-[WebView _initWithArguments:]):

2009-01-13  Timothy Hatcher  <timothy@apple.com>

        Adds a workaround for the flip4mac installer plugin decoding a WebView from a NIB on a secondary thread.

        <rdar://problem/6489788> New WebKit thread checks break installation of flip4mac (thread violation)

        Reviewed by Darin Adler.

        * Misc/WebKitVersionChecks.h: Add WEBKIT_FIRST_VERSION_WITHOUT_WEBVIEW_INIT_THREAD_WORKAROUND.
        * Misc/WebNSObjectExtras.h: Add _webkit_performSelectorOnMainThread:withObject:.